.metadata/.plugins/org.eclipse.cdt.ui/001Tasks.build.log
11:53:04 **** Incremental Build of configuration Debug for project 001Tasks ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"D:/Workspace/RTOS_workspace/001Tasks/ThirdParty/FreeRTOS" -I"D:/Workspace/RTOS_workspace/001Tasks/ThirdParty/FreeRTOS/include" -I"D:/Workspace/RTOS_workspace/001Tasks/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'task1_handler':
../Core/Src/main.c:136:3: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
  136 |   printf("%s",(char*)param);
      |   ^~~~~~
../Core/Src/main.c:136:3: warning: incompatible implicit declaration of built-in function 'printf'
../Core/Src/main.c:26:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   25 | #include "task.h"
  +++ |+#include <stdio.h>
   26 | /* USER CODE END Includes */
../Core/Src/main.c: In function 'task2_handler':
../Core/Src/main.c:142:3: warning: incompatible implicit declaration of built-in function 'printf'
  142 |   printf("%s",(char*)param);
      |   ^~~~~~
../Core/Src/main.c:142:3: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/main.c: At top level:
../Core/Src/main.c:235:6: error: redefinition of 'task1_handler'
  235 | void task1_handler(void* param){}
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:134:6: note: previous definition of 'task1_handler' was here
  134 | void task1_handler(void* param){
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:236:6: error: redefinition of 'task2_handler'
  236 | void task2_handler(void* param){}
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:140:7: note: previous definition of 'task2_handler' was here
  140 |  void task2_handler(void* param){
      |       ^~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

11:53:05 Build Failed. 3 errors, 3 warnings. (took 861ms)

